# cpp-cache

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  CacheBenchmark.cpp  CacheBenchmarkLFU.cpp  ConcurrencyBenchmark.cpp
benchmarks/comparison/: BenchmarkConfig.hpp  LibraryComparison.cpp
benchmarks/comparison/strategies/: CacheStrategy.hpp  CppLRUStrategy.hpp  LRUCache11Strategy.hpp  OurCacheStrategy.hpp
benchmarks/comparison/workloads/: TemporalWorkload.hpp  UniformWorkload.hpp  Workload.hpp  ZipfWorkload.hpp
demo/services/: MarketDataService.hpp
demo/stub/: StubTinkoffApi.hpp
docs/: REPORT.md  cache-library-spec.md
include/cache/: Cache.hpp  ICache.hpp
include/cache/concurrency/: ShardedCache.hpp  ThreadSafeCache.hpp
include/cache/eviction/: LFUPolicy.hpp  LRUPolicy.hpp
include/cache/expiration/: GlobalTTL.hpp  IExpirationPolicy.hpp  NoExpiration.hpp  PerKeyTTL.hpp
include/cache/listeners/: LoggingListener.hpp  PersistenceListener.hpp  StatsListener.hpp  ThreadPerListenerComposite.hpp
include/cache/persistence/: IPersistence.hpp  SnapshotPersistence.hpp
include/cache/policies/: LFUPolicy.hpp
include/cache/serialization/: BinarySerializer.hpp  ISerializer.hpp
include/cache/utils/: ThreadSafeQueue.hpp
tests/: BinarySerializerTest.cpp  CacheLFUTest.cpp  CacheTest.cpp  ConcurrencyTest.cpp  GlobalTTLTest.cpp  LFUPolicyTest.cpp  LRUPolicyTest.cpp  ListenersTest.cpp  NoExpirationTest.cpp  PerKeyTTLTest.cpp  PersistenceListenerTest.cpp  SnapshotPersistenceTest.cpp  ThreadPerListenerCompositeTest.cpp  ThreadSafeQueueTest.cpp
